# mvp-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 001_initial.py  002_seed_site_configs.py  003_config_tables.py  004_add_job_logs_urls.py  005_add_updated_at_to_scrape_jobs.py  006_add_job_lifecycle_fields.py  007_add_request_headers.py  008_add_confidence_scores_to_site_configs.py  009_merge_job_lifecycle_and_confidence_heads.py  010_add_enriched_title_to_listings.py  011_add_enriched_meta_description_to_listings.py  012_add_image_exclude_filter_to_site_configs.py  013_habinedita_image_exclude_filter.py  014_add_imodigi_exports.py  015_add_enriched_translations_to_listings.py  016_drop_flat_enriched_columns.py  017_fix_search_vector_trigger.py  018_add_use_js_render_to_site_configs.py  019_fix_search_vector_language.py  020_expand_energy_certificate_column.py  021_add_schedule_fields_to_site_configs.py  022_fix_request_headers_column.py  023_add_performance_indexes.py  3b97b6bb5e3e_make_scrape_job_id_not_null_and_source_.py  4e4b4c094720_add_price_on_request_to_listings.py  5bc0b4733832_convert_image_filters_back_to_text.py  6ff4de5cc6b5_025_imodigi_sync_seetings.py  88215bd33e3a_change_scrape_jobs_json_to_jsonb.py  95b4d1ffd757_add_partner_id_to_imodigi_exports.py  ab83cfce0a7a_add_pagination_fields_to_site_configs.py  d0995c1e09fa_teste.py  (+2 more)
app/: config.py  database.py  main.py
tests/: conftest.py
(+91 files in other folders)
